# MRIDicomSort

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: app.py  main.py
backend/src/: logging_conf.py  models.py  routes.py
frontend/mridicomsort/: .gitignore  README.md  dicom_metadata.csv  electron-builder.yml  package-lock.json  package.json
frontend/mridicomsort/src/main/: index.ts
frontend/mridicomsort/src/preload/: index.ts
frontend/mridicomsort/src/renderer/: index.html
frontend/mridicomsort/src/renderer/src/components/: DicomExtractor.vue  DicomMetadataTable.vue  FilterModal.vue
frontend/mridicomsort/src/renderer/src/router/: index.ts
frontend/mridicomsort/src/renderer/src/views/: MRIVisualizer.vue  StartPage.vue
src/mridicomsort/: cli.py  config.py  config.yaml
src/mridicomsort/step1_preprocessing/: dicom_metadata.py  dicom_utils.py  filtering.py  run_filtering.py  run_metadata_extraction.py
src/mridicomsort/step2_modality_detection/: convert_clusters2dataset.py  heuristic_clustering.py  llm_modality_assignment.py  llm_modality_normalization.py
src/mridicomsort/step3_postprocessing/: build_mri_html_viewer.py  convert_dicom2nii.py  quality_scoring.py
src/mridicomsort/utils/: MRIScan.py  README.md  compare_folders.py  dicom2niiti.py  dicom_organize.py  dicom_to_nifti.py  merge_folders.py
