[project]
name = "MRIDicomSort"
version = "0.1.0"
description = "Sort raw dicom exports and prepare data for training."
authors = [
    {name = "ms-Ana", email = "ms.urmanana@gmail.com"},
]
dependencies = ["dcm2niix>=1.0.20250506", "PyMuPDF>=1.26.7", "heudiconv>=1.3.4", "OpenAI>=2.21.0", "tqdm>=4.67.1", "jupyter>=1.1.1", "pandas>=2.3.3", "scikit-learn>=1.8.0", "matplotlib>=3.10.8", "openpyxl>=3.1.5", "dotenv>=0.9.9", "SimpleITK>=2.5.3", "dicom2nifti>=2.6.2", "seaborn>=0.13.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
