[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MRIDicomSort"
version = "0.1.0"
description = "Sort raw dicom exports and prepare data for training."
authors = [
    {name = "ms-Ana", email = "ms.urmanana@gmail.com"},
]
requires-python = ">=3.12, <3.15"
readme = "README.md"
license = {text = "MIT"}


dependencies = ["dcm2niix>=1.0.20250506", "PyMuPDF>=1.26.7", "heudiconv>=1.3.4", "OpenAI>=2.21.0", "tqdm>=4.67.1", "jupyter>=1.1.1", "pandas>=2.3.3", "scikit-learn>=1.8.0", "matplotlib>=3.10.8", "openpyxl>=3.1.5", "dotenv>=0.9.9", "SimpleITK>=2.5.3", "dicom2nifti>=2.6.2", "pyinstaller>=4.5.1", "setuptools>=82.0.1"]

[project.scripts]
mridicomsort = "mridicomsort.cli:cli"

[project.optional-dependencies]
backend = ["fastapi", "uvicorn"]

dev=[
    "pytest",
    "ruff",
    "black",
    "pre-commit"
]

[tool.pdm.scripts]
dev.cmd = "pdm run uvicorn main:app --app-dir backend --reload --port 8000 --reload-exclude node_modules --reload-exclude .git"
format-code = "ruff format"
format-imports = "ruff check --select I --fix"
format = {composite = ["format-imports", "format-code"]}
lint = "ruff check"
lint-fix = "ruff check --fix"
test = "pytest"

[tool.pdm]
distribution = true
